--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     implementation 'com.android.support:leanback-v17:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
