--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:leanback-v17:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:leanback-v17:27.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.j256.ormlite:ormlite-android:4.48'
+    implementation "com.tojc.ormlite.android:ormlite-content-provider-library:1.0.4@aar"
 }
